public/css/navbar.css
header {
    background-color: var(--main-color);
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

@media only screen and (max-width: 600px) {
    header {
        flex-direction: column;
    }
}

nav {
    box-sizing: border-box;
    margin: 0 !important;
    padding: 0 !important;
}

nav ul {
    box-sizing: border-box;
    margin: 0 !important;
    padding: 0 !important;
    display: flex;
    align-items: center;
    justify-content: space-between;
    list-style: none;
}

li.nav-item {
    box-sizing: border-box;
    align-items: center;

    padding: 0px 20px;
}

.warning {
    color: rgb(255, 0, 0);
    transition: 1s ease;
}

.logo {
    border: none;
    outline: none;
    background: none;

    border-radius: 20%;

    transition: 1s ease;
}

.logo:hover,
.logo:focus {
    background-color: #ffffff;
    border-radius: 50%;

    transition: 1s ease;
}
button.nav-btn {
    width: 100%;
    height: 100%;
    color: var(--link-color);
    font-size: 1.5em;
    font-weight: 700;

    border-radius: 10px;

    transition: 1s ease;
}

button.nav-btn:hover,
button.nav-btn:focus,
button.nav-btn:has(+ .dropdown-menu:hover) {
    background-color: var(--link-color);
    color: var(--main-color);
    border-radius: 20px;

    transition: 1s ease;
}

.dropdown-menu {
    position: absolute !important;
    -webkit-transform: translate(-25%, 0);
    -o-transform: translate(-25%, 0);
    transform: translate(-25%, 0);
}

div.alert-success {
    display: flex;
    text-align: center;
    padding: 5px 10px;
    margin: 0px 20px;
}

.dropdown-divider + form .dropdown-item:hover {
    background-color: rgb(255, 255, 131);
    color: black;
}

.dropdown-item {
    display: flex;
    justify-content: center;
    text-align: center;
}

.dropdown-item:hover {
    background-color: var(--main-color);
    color: var(--link-color);
}

.dropdown-divider {
    border-top: 1px solid var(--link-color);
}

.form-group * {
    font-family: var(--main-font);
}

.form-check * {
    color: solid black;
    font-family: var(--main-font);
}

.iniciar_sesion {
    width: 100%;
}

.dropdown_button {
    font-family: var(--main-font);
}

/* Footer CSS */

footer {
    margin: 5vh 0px 0px 0px;
}

footer * {
    margin: 0px 0px 0px 0px;
    padding: 0;
}

footer a::after {
    content: '📎';
}

.footer-link {
    text-decoration: none;
}

.footer-link:hover {
    text-decoration: underline;
}

.footerblock {
    border-inline: 0.3vw solid black;
    border-block: 0.5vw solid black;
    background-color: var(--main-color);
    text-align: center;
}

.footerblock p {
    font-family: var(--main-font);
    color: var(--text-color);
    text-decoration: none;
    text-align: left;
}

.footerblock address {
    font-family: var(--main-font);
    color: var(--text-color);
    text-decoration: none;
}

